--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
           <div class="image"></div>
         </div>
       </div>
-    </div>
-    <div class="honwrContainer">
-      <div class="hongwr">홍왕열</div>
+      <div class="logo">
+        <img src="./images/logo_overwatch.png" alt="OverWatch" />
+      </div>
     </div>
   </body>
 </html>
